[package]
name = "wgpu-tensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
bitflags = "2.3.2"
bytemuck = "1.13.1"
downcast-rs = "1.2.0"
itertools = "0.10.5"
nanoid = "0.4.0"
once_cell = "1.18.0"
rand = "0.8.5"
smallvec = "1.10.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
wgpu = "0.16.1"
